--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "json-server": "^0.16.3",
     "typescript": "^4.3.2"
   }
 }
